WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257358
REGRESSION (
264433@main
): Drawing small images becomes slower
https://bugs.webkit.org/show_bug.cgi?id=257358
Summary
REGRESSION (264433@main): Drawing small images becomes slower
Said Abou-Hallawa
Reported
2023-05-25 15:53:42 PDT
264433@main
made RenderBoxModelObject::decodingModeForImageDraw() call RenderElement::imageVisibleInViewport() for all images including the small ones which do not require async image decoding unless the attribute decoding="async" is specified. This regressed the score of the MotionMark Leaves sub-test by almost 2.5%.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-05-25 15:55:00 PDT
rdar://109810640
Said Abou-Hallawa
Comment 2
2023-05-25 17:09:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14376
EWS
Comment 3
2023-05-30 09:43:10 PDT
Committed
264679@main
(efb71a57dadd): <
https://commits.webkit.org/264679@main
> Reviewed commits have been landed. Closing PR #14376 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug